Version 1.3.0-pre2
------------------
Bug Fixes
- Fixed a bug where latest.ini creation was failing on a fresh install since
  the cache directory did not exist. (Reported by gabmatrix). Also added error 
  checking for all file writes.

Version 1.3.0-pre1
------------------
New Applications
- Development : Py2Exe, wxPython Documentation
- Fun and Games : Battle for Wesnoth, Tremulous
- Internet : Google Talk, Maxthon, Opera, Skype, X-Chat, Yahoo Messenger
- Libraries : K-Lite Mega Codec Pack, OpenSSL
- Productivity : DVD-Flick, ImgBurn, Inkscape
- Utilities : ImageMagick, Launchy, RocketDock, Synergy

GUI Enhancements
- Brand new look and feel sporting a vertical layout and colors.
- Added the Upgradeable category that lists all installed applications with
  available upgrades.
- AppSnap now displays download progress information.
- Applications can now be filtered by name based on a user specified string.
- The CLI can now filter applications by category as well as user specified
  strings, both for listing as well as to perform application specific actions.
- Added a bug report button to simplify reporting problems.

Internal Improvements
- Support for parallel downloading in order to make best use of the available
  connection.
- AppSnap now caches the version information obtained by scraping for a user
  configurable time limit (default 2 days) after which the information needs
  to be downloaded again.
- Intelligent Python based build system to simplify packaging AppSnap.
- Installer is now capable of detecting and uninstalling older versions. AppSnap
  can now be added to its own database.
- Installer now deletes only installed files thus preserving installed.ini,
  userdb.ini and the cache directory.
- Installer now supports silent uninstallation.
- AppSnap source is now distributed in a ZIP archive by the installer.
- Added MAJORMINORSUB_VERSION in order to support ImageMagick uninstallation.